Partial_14Dec2021/force-app/main/default/objects/Discount_Master__c/Discount_Master__c.object-meta.xml
<CustomObject>
    <description>This object contains the standard discount for every product based on the state, distributor</description>
    <label>Discount Master</label>
    <nameField>
        <displayFormat>DM-{00000}</displayFormat>
        <label>Discount Master Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>