Partial_14Dec2021/force-app/main/default/objects/Discount_Master__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to account criteria only distributor record types</description>
    <label>Distributor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Discount Masters</relationshipLabel>
    <relationshipName>Discount_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>