Partial_14Dec2021/force-app/main/default/objects/Discount_Master__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Global_Set</valueSetName>
    </valueSet>
</CustomField>