Partial_14Dec2021/force-app/main/default/objects/Discount_Master__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <description>The sap code of the distributor</description>
    <inlineHelpText>The sap code of the distributor</inlineHelpText>
    <label>SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>