Partial_14Dec2021/force-app/main/default/objects/Discount_Master__c/fields/Std_APPL_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Std_APPL_Discount_Percent__c</fullName>
    <label>Std. APPL Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>